--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "ember build",
     "test": "ember try:testall"
   },
-  "repository": "",
+  "repository": "dollarshaveclub/ember-content-for-file",
   "engines": {
     "node": ">= 0.10.0"
   },
